added the updated images

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h2 class="title">About myself</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/Profile_nimfa (2).jpg" alt="">
+                    <img src="images/Image.jpeg" alt="">
                 </div>
                 <div class="column right">
                     <p>I'm an enthusiastic fifth-year mathematics and statistics student at McMaster University interested in data science, mathematical modeling, and everything to do with artificial intelligence. Always looking for more opportunities to get my hands dirty.</p>
@@ -100,7 +100,7 @@
 
                     <div class="box">
                         <i class="fa-solid fa-chalkboard-user"></i>
-                        <div class="text">Educator</div>
+                        <div class="text">Teacher</div>
                         <p>Tutorer of mathematics, probability, statistics and sport. Engaging further learning and unlocking confidence.</p>
                     </div>
                 </div>
