--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h2 class="title">About myself</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/Profile_nimfa (2).jpg" alt="">
+                    <img src="images/Image.jpeg" alt="">
                 </div>
                 <div class="column right">
                     <p>I'm an enthusiastic fifth-year mathematics and statistics student at McMaster University interested in data science, mathematical modeling, and everything to do with artificial intelligence. Always looking for more opportunities to get my hands dirty.</p>
@@ -100,7 +100,7 @@
 
                     <div class="box">
                         <i class="fa-solid fa-chalkboard-user"></i>
-                        <div class="text">Educator</div>
+                        <div class="text">Teacher</div>
                         <p>Tutorer of mathematics, probability, statistics and sport. Engaging further learning and unlocking confidence.</p>
                     </div>
                 </div>
@@ -122,7 +122,8 @@
                     <div class="text">Honours Bachelor of Science - Mathematics and Statistics (Fifth Year)</div>
                     <p>Over the past five years, I have completed many courses at McMaster on data science, mathematical coding, and statistical model construction and 
                         validation, wherein we have used various machine and statistical learning methods to model 
-                        and make predictions using real-world data sets. I am most interested in imaging data and working with segmentation and computer vision models.</p>
+                        and make predictions using real-world data sets. I am most interested in imaging data and working with segmentation and computer vision models.
+                    </p>
                     <br>
 
                     <p>I have a keen interest in AI. In particular, I am interested in research involving modern AI frameworks to
@@ -141,9 +142,8 @@
                         as a clinical decision support tool. In addition, I regularly conduct statistical analyses (ex: 
                         ROC tables, significance tests) and advise groups of physicians on appropriate statistical 
                         conclusions, all using real patient data.</p>
-                    <a href="https://github.com/Jackel65">Github <i class="fa-brands fa-github"></i></a>
+                    <a href="https://github.com/Jackel65">GitHub <i class="fa-brands fa-github"></i></a>
                     <a href="https://www.linkedin.com/in/jack-longwell-745a511b5/">Linkedin <i class="fa-brands fa-linkedin"></i></a>
-                    <a href="https://www.ophtho.ai">Ophtho.ai <i class="fa-solid fa-eye"></i></a>
                 </div>
 
 
@@ -246,41 +246,48 @@
             <h2 class="title">Projects</h2>
             <div class="project-content">
 
-                
-                <div class="card">
+                <a href="https://codeocean.com/capsule/5716723/tree">
+                    <div class="card">
 
-                    <div class="box">
-                        <i class="fas fa-code"></i>
-                        <div class="text">SBSA</div>
-                        <p>The subfoveal bleb segmentation algorithm can autmatically quatify the amount of fluid in a diseased retina.</p>
+                        <div class="box">
+                            <i class="fa-solid fa-hammer"></i>
+                            <div class="text">SBSA</div>
+                            <p style="color: #fff;">The Subfoveal Bleb Segmentation Algorithm can autmatically quantify the amount of fluid in a diseased retina. Click here for the code capsule (Work in progress).</p>
+                        </div>
                     </div>
-                </div>
-
-                <div class="card">
-
-                    <div class="box">
-                        <i class="fas fa-code"></i>
-                        <div class="text">Ophtho.ai</div>
-                        <p>I created a vision transformer using pytorch and real patient data and trained it to detect common retinal diseases.</p>
+                </a>
+                <a href="https://www.ophtho.ai">
+                    <div class="card">
+                        
+                            <div class="box">
+                                <i class="fa-solid fa-eye"></i>
+                                <div class="text">Ophtho.ai</div>
+                                <p style="color: #fff;">I created a vision transformer leveraging pytorch and real patient data and trained it to detect common retinal diseases. Click here to check it out.</p>
+                            </div>
                     </div>
-                </div>
+                </a>
 
-                <div class="card">
+                <a href="https://github.com/Jackel65/Personal_Website">
+                    <div class="card">
 
-                    <div class="box">
-                        <i class="fas fa-code"></i>
-                        <div class="text">Personal website</div>
-                        <p>Yup, I coded this website up using HTML, CSS and JS. Click here to find the code for this website on my Github.</p>
+                        <div class="box">
+                            <i class="fa-solid fa-user"></i>
+                            <div class="text">Personal website</div>
+                            <p style="color: #fff;">Yup, I coded this website up using HTML, CSS and JavaScript. Click here to find the code for this website on my GitHub.</p>
+                        </div>
                     </div>
-                </div>
+                </a>
 
-                <div class="card">
+                <a href="https://github.com/Jackel65/R-Functions">
+                    <div class="card">
 
-                    <div class="box">
-                        <i class="fas fa-code"></i>
-                        <div class="text">Data explorations</div>
+                        <div class="box">
+                            <i class="fa-solid fa-database"></i>
+                            <div class="text">Data explorations</div>
+                            <p style="color: #fff;">New Data sets are abundantly found and collected everywhere nowadays. I love delving deep into data and discovering the stories that they have to to tell. Click here for some examples of what I've done. </p>
+                        </div>
                     </div>
-                </div>
+                </a>
 
             </div>
 
