updated papers and skills sections

--- a/index.html
+++ b/index.html
@@ -222,9 +222,25 @@
                     <div class="bars">
                         <div class="info">
                             <span>SQL</span>
-                            <span>100%</span>
+                            <span>40%</span>
                         </div>
                         <div class="line sql"></div>
+                    </div>
+
+                    <div class="bars">
+                        <div class="info">
+                            <span>NoSQL</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="line nosql"></div>
+                    </div>
+
+                    <div class="bars">
+                        <div class="info">
+                            <span>SPARQL</span>
+                            <span>30%</span>
+                        </div>
+                        <div class="line sparql"></div>
                     </div>
 
                     <div class="text">Also proficient with: </div>
@@ -327,6 +343,13 @@
             <h2 class="title">Papers</h2>
 
             <div class="paper-content">
+                <div class="text">Automated segmentation of subretinal fluid from optical coherence tomography: A vision transformer approach with cross-validation </div>
+                <p>Julie Midroni, HBSc, Jack Longwell, HBSc, Nishaant Bhambra, MD, Sueellen Demian, MD, Aurora Pecaku, MD, Isabela Martins Melo, MD, Rajeev H. Muni, MD, MSc</p>
+                <p><em>Under Review at Journal of Ophthalmology</em></p>
+
+                <br>
+
+
                 <div class="text">Triple Augmented Generative Language Models for SPARQL Generation from Natural Language Questions</div>
                 <p>Jack Longwell, HBSc, Mahdiyar Ali Akbar Alavi, BEng, Fattane Zarrinkalam, PhD, Faezeh Ensan, PhD</p>
                 <p><em>Presented at Association for Computing Machinery Speacial Intrest Group on Information Retrieval in the Asian Pacific, 2024</em></p>
@@ -358,12 +381,10 @@
                 <p><em>Presented at the American Society of Clinical Oncology Quality Symposium, 2023</em></p>
 
                 <br>
-
-
                 
                 <div class="text">Segmentation and volume calculation for subretinal fluid using OCT images, OpenCV, and scikitlearn</div>
                     <p>Julie Midroni MD(C), Jack Longwell, HBSc, Nishaant (Shaan) Bhambra, MD, Isabela M Melo, MD, Rajeev H. Muni, MD, MSc </p>
-                    <p><em>Presented at the 11th VBS Annual Meeting, under revision at ACTA Ophthalmologica</em></p>
+                    <p><em>Presented at the 11th VBS Annual Meeting</em></p>
 
                 <br>
             
