updated name of journal

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
             <div class="paper-content">
                 <div class="text">Automated segmentation of subretinal fluid from optical coherence tomography: A vision transformer approach with cross-validation </div>
                 <p>Julie Midroni, HBSc, Jack Longwell, HBSc, Nishaant Bhambra, MD, Sueellen Demian, MD, Aurora Pecaku, MD, Isabela Martins Melo, MD, Rajeev H. Muni, MD, MSc</p>
-                <p><em>Under Review at Journal of Ophthalmology</em></p>
+                <p><em>Under Review at Ophthalmology Science</em></p>
 
                 <br>
 
